# ECOFFitter

./: .gitignore  LICENSE  README.md  env.yml  gui.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  gui-build.yml  mypy.yml  pypi.yaml
demo_files/: input.txt  output.txt  params.txt
src/ecoff_fitter/: __init__.py  __main__.py  cli.py  core.py  defence.py  graphs.py  mixture.py  report.py  utils.py
tests/: test_cli.py  test_defence.py  test_ecoff_fitter.py  test_graphs.py  test_report.py  test_utils.py
