[metadata]
name = ecoff-fitter
version = 0.1.0
author = Dylan Adlard, Philip W Fowler
author_email = dylan.adlard@ndm.ox.ac.uk
description = A Python tool to fit an interval regression model to censored Minimum Inhibitory Concentration values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DylanAdlard/ECOFFitter
keywords = ECOFF, antimicrobial resistance, minimum inhibitory concentration, MIC
license = MIT
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = ecoff_fitter
package_dir =
    = src
python_requires = >=3.9
install_requires = 
    numpy
    scipy
    pandas
    joblib
    matplotlib
    PyYAML
zip_safe = False
include_package_data = True

[coverage:run]
omit =
    */ecoff_fitter/wts.py
